Fixed the overflow-x bug on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,7 +9,10 @@ body {
   color: $text-color;
   @apply font-mallanna;
   min-height: 100svh;
-  overflow-x: hidden; // TODO: Seems to be buggy on mobile
+}
+
+body, html {
+  overflow-x: hidden;
 }
 
 .enter-transition {
